@@ -30,9 +30,9 @@ dependencies {
     implementation ('org.apache.httpcomponents:httpclient:4.5.14') {
         exclude group: 'commons-logging', module: 'commons-logging'
     }
-    implementation 'org.apache.logging.log4j:log4j-core:2.25.1'
+    implementation 'org.apache.logging.log4j:log4j-core:2.25.2'
     implementation 'com.oracle.database.jdbc:ojdbc11:23.9.0.25.07'
-    implementation 'org.springframework:spring-jdbc:6.2.8'
+    implementation 'org.springframework:spring-jdbc:6.2.9'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
 }
